snippet formatting and fixing overflow

--- a/styles.css
+++ b/styles.css
@@ -3,22 +3,32 @@
 --headings-color: #D969EA;
 --code-color: #fff;
 }
+html {
+    font-size: 10px;
+}
 header {
     color: var(--headings-color);
     text-align: center;
 }
+header h1 {
+    font-size: 3rem;
+}
+header h3 {
+    font-size: 2rem;
+}
 .headings {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 2rem;
 }
-section {
-  width: 450px;
+.container section {
+  width: 25%;
   border: 2px dashed rgb(0, 70, 128);
   padding: 50px;
-  margin: 20px;
+  margin-top: 1.5rem;
 }
 .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 section h3 {
     display: flex;
@@ -29,3 +39,7 @@ section h3 {
     border: solid #5B6DCD 1px;
     padding: 5px;
 }
+.container p, pre {
+    font-size: 1.5rem;
+}
+
